--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "material-start",
+  "name": "CPA",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.1",
    "main"  : "main.js",
-  "description": "A starter project for AngularJS Material",
-  "repository": "https://github.com/angular/material-start",
+  "description": "A Cross Platform App",
+  "repository": "https://github.com/sudosublime/cpa",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/angular/material/blob/master/LICENSE"
+      "url": "https://github.com/sudosublime/cpa/LICENSE"
     }
   ],
   "dependencies": {
@@ -20,6 +20,8 @@
   "devDependencies": {
     "angular-mocks": "^1.4.9",
     "electron-prebuilt": "^0.36.7",
+    "cordova":"^6.0.0",
+    "http-server": "^0.9.0",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
