--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "CPA",
   "private": true,
   "version": "0.0.1",
-   "main"  : "main.js",
+  "main": "main.js",
   "description": "A Cross Platform App",
   "repository": "https://github.com/sudosublime/cpa",
   "licenses": [
@@ -19,8 +19,11 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
+    "cordova": "^6.0.0",
     "electron-prebuilt": "^0.36.7",
-    "cordova":"^6.0.0",
+    "gulp": "^3.9.1",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "http-server": "^0.9.0",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
